# xMath

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ConfigureProject.ps1  README.md  SetupProject.bat  vcpkg.json
cmake/: doxygen.cmake  math.cmake
docs/: CONFIGURATION.md  MATH_TODO.md  README.md  aabb.md  colors_gradients.md  constants_epsilon.md  matrices.md  projections.md  quaternions.md  rotation.md  scale.md  transforms.md  translate.md  vectors.md
scripts/: Doxyfile  README.md  version_increment.ps1
tests/: CMakeLists.txt  Catch2TestListener.h  LoggingIntegrationExample.cpp  README.md  SimpleTestHelper.h  TestListener.h  TestLogger.h
tests/math_tests/: EpsilonTests.cpp  MathUtilsTests.cpp  MatrixEdgeTests.cpp  MatrixTests.cpp  ProjectionTests.cpp  QuatSmokeTests.cpp  VectorEdgeTests.cpp  VectorTests.cpp
xMath/config/: math_config.h  resource.h  version.h  xMath.rc
xMath/includes/: bounding_box.h  colors.h  constants.h  epsilon.h  frustum.h  gradients.h  mat2.h  mat3.h  mat4.h  math_utils.h  matrix.h  plane.h  platform.h  projection.h  quat.h  rectangle.h  rotation.h  scale.h  sphere.h  transforms.h  translate.h  vec2.h  vec3.h  vec4.h  vector.h  xmath.hpp
xMath/src/: bounding_box.cpp  colors.cpp  frustum.cpp  gradients.cpp  mat2.cpp  mat3.cpp  mat4.cpp  math_utils.cpp  matrix.cpp  plane.cpp  projection.cpp  quat.cpp  rectangle.cpp  rotation.cpp  scale.cpp  sphere.cpp  transforms.cpp  translate.cpp
